ADD navbar with responsive view

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,7 +6,8 @@
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/css"
+      "assets/css",
+      "assets/sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -20,7 +21,125 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "assets/sass/custom/styles.scss",
+      "imports": [
+        "assets/sass/custom/base/_colors.scss",
+        "assets/sass/custom/base/_fonts.scss",
+        "assets/sass/custom/helpers/_mixins.scss",
+        "assets/sass/custom/components/_buttons.scss",
+        "assets/sass/custom/components/_cards.scss",
+        "assets/sass/custom/components/_animation.scss",
+        "assets/sass/custom/layout/_xtras.scss",
+        "assets/sass/custom/layout/_body.scss",
+        "assets/sass/custom/layout/_header.scss",
+        "assets/sass/custom/layout/_footer.scss",
+        "assets/sass/custom/pages/_home.scss",
+        "assets/sass/custom/vendors/_animate.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/app.scss",
+      "imports": [
+        "assets/sass/bootstrap/bootstrap.scss",
+        "assets/sass/custom/styles.scss",
+        "assets/sass/bootstrap/_functions.scss",
+        "assets/sass/bootstrap/_variables.scss",
+        "assets/sass/bootstrap/_mixins.scss",
+        "assets/sass/bootstrap/_root.scss",
+        "assets/sass/bootstrap/_reboot.scss",
+        "assets/sass/bootstrap/_type.scss",
+        "assets/sass/bootstrap/_images.scss",
+        "assets/sass/bootstrap/_code.scss",
+        "assets/sass/bootstrap/_grid.scss",
+        "assets/sass/bootstrap/_tables.scss",
+        "assets/sass/bootstrap/_forms.scss",
+        "assets/sass/bootstrap/_buttons.scss",
+        "assets/sass/bootstrap/_transitions.scss",
+        "assets/sass/bootstrap/_dropdown.scss",
+        "assets/sass/bootstrap/_button-group.scss",
+        "assets/sass/bootstrap/_input-group.scss",
+        "assets/sass/bootstrap/_custom-forms.scss",
+        "assets/sass/bootstrap/_nav.scss",
+        "assets/sass/bootstrap/_navbar.scss",
+        "assets/sass/bootstrap/_card.scss",
+        "assets/sass/bootstrap/_breadcrumb.scss",
+        "assets/sass/bootstrap/_pagination.scss",
+        "assets/sass/bootstrap/_badge.scss",
+        "assets/sass/bootstrap/_jumbotron.scss",
+        "assets/sass/bootstrap/_alert.scss",
+        "assets/sass/bootstrap/_progress.scss",
+        "assets/sass/bootstrap/_media.scss",
+        "assets/sass/bootstrap/_list-group.scss",
+        "assets/sass/bootstrap/_close.scss",
+        "assets/sass/bootstrap/_modal.scss",
+        "assets/sass/bootstrap/_tooltip.scss",
+        "assets/sass/bootstrap/_popover.scss",
+        "assets/sass/bootstrap/_carousel.scss",
+        "assets/sass/bootstrap/_utilities.scss",
+        "assets/sass/bootstrap/_print.scss",
+        "assets/sass/custom/base/_colors.scss",
+        "assets/sass/custom/base/_fonts.scss",
+        "assets/sass/custom/helpers/_mixins.scss",
+        "assets/sass/custom/components/_buttons.scss",
+        "assets/sass/custom/components/_badge.scss",
+        "assets/sass/custom/components/_cards.scss",
+        "assets/sass/custom/components/_animation.scss",
+        "assets/sass/custom/layout/_xtras.scss",
+        "assets/sass/custom/layout/_body.scss",
+        "assets/sass/custom/layout/_header.scss",
+        "assets/sass/custom/layout/_footer.scss",
+        "assets/sass/custom/pages/_home.scss",
+        "assets/sass/custom/vendors/_animate.scss",
+        "assets/sass/bootstrap/mixins/_breakpoints.scss",
+        "assets/sass/bootstrap/mixins/_hover.scss",
+        "assets/sass/bootstrap/mixins/_image.scss",
+        "assets/sass/bootstrap/mixins/_badge.scss",
+        "assets/sass/bootstrap/mixins/_resize.scss",
+        "assets/sass/bootstrap/mixins/_screen-reader.scss",
+        "assets/sass/bootstrap/mixins/_size.scss",
+        "assets/sass/bootstrap/mixins/_reset-text.scss",
+        "assets/sass/bootstrap/mixins/_text-emphasis.scss",
+        "assets/sass/bootstrap/mixins/_text-hide.scss",
+        "assets/sass/bootstrap/mixins/_text-truncate.scss",
+        "assets/sass/bootstrap/mixins/_visibility.scss",
+        "assets/sass/bootstrap/mixins/_alert.scss",
+        "assets/sass/bootstrap/mixins/_buttons.scss",
+        "assets/sass/bootstrap/mixins/_caret.scss",
+        "assets/sass/bootstrap/mixins/_pagination.scss",
+        "assets/sass/bootstrap/mixins/_lists.scss",
+        "assets/sass/bootstrap/mixins/_list-group.scss",
+        "assets/sass/bootstrap/mixins/_nav-divider.scss",
+        "assets/sass/bootstrap/mixins/_forms.scss",
+        "assets/sass/bootstrap/mixins/_table-row.scss",
+        "assets/sass/bootstrap/mixins/_background-variant.scss",
+        "assets/sass/bootstrap/mixins/_border-radius.scss",
+        "assets/sass/bootstrap/mixins/_box-shadow.scss",
+        "assets/sass/bootstrap/mixins/_gradients.scss",
+        "assets/sass/bootstrap/mixins/_transition.scss",
+        "assets/sass/bootstrap/mixins/_clearfix.scss",
+        "assets/sass/bootstrap/mixins/_grid-framework.scss",
+        "assets/sass/bootstrap/mixins/_grid.scss",
+        "assets/sass/bootstrap/mixins/_float.scss",
+        "assets/sass/bootstrap/utilities/_align.scss",
+        "assets/sass/bootstrap/utilities/_background.scss",
+        "assets/sass/bootstrap/utilities/_borders.scss",
+        "assets/sass/bootstrap/utilities/_clearfix.scss",
+        "assets/sass/bootstrap/utilities/_display.scss",
+        "assets/sass/bootstrap/utilities/_embed.scss",
+        "assets/sass/bootstrap/utilities/_flex.scss",
+        "assets/sass/bootstrap/utilities/_float.scss",
+        "assets/sass/bootstrap/utilities/_position.scss",
+        "assets/sass/bootstrap/utilities/_screenreaders.scss",
+        "assets/sass/bootstrap/utilities/_shadows.scss",
+        "assets/sass/bootstrap/utilities/_sizing.scss",
+        "assets/sass/bootstrap/utilities/_spacing.scss",
+        "assets/sass/bootstrap/utilities/_text.scss",
+        "assets/sass/bootstrap/utilities/_visibility.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
