ADD skeleton for filter navbar and resultfound card

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -86,6 +86,7 @@
         "assets/sass/custom/components/_badge.scss",
         "assets/sass/custom/components/_cards.scss",
         "assets/sass/custom/components/_animation.scss",
+        "assets/sass/custom/components/_toggle.scss",
         "assets/sass/custom/layout/_xtras.scss",
         "assets/sass/custom/layout/_body.scss",
         "assets/sass/custom/layout/_header.scss",
